First pass with Cavern compatibility.